--- a/Touchscreen_Display/tftDisplay/.vscode/settings.json
+++ b/Touchscreen_Display/tftDisplay/.vscode/settings.json
@@ -5,5 +5,6 @@
         "*.ino": "cpp"
     },
     "particle.firmwareVersion": "5.9.0",
-    "particle.targetPlatform": "p2"
+    "particle.targetPlatform": "p2",
+    "C_Cpp.errorSquiggles": "enabled"
 }
