--- a/primaryGasExchangeCode/project.properties
+++ b/primaryGasExchangeCode/project.properties
@@ -2,3 +2,4 @@ name=primaryGasExchangeCode
 #assetOtaDir=assets
 dependencies.IoTClassroom_CNM=1.1.2
 dependencies.Adafruit_MAX31856_library=1.0.3
+dependencies.Adafruit_VEML7700=0.0.3
